--- a/xinshuwu/app/build.gradle
+++ b/xinshuwu/app/build.gradle
@@ -65,9 +65,12 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.0.0'
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     implementation 'com.gyf.immersionbar:immersionbar-components:3.0.0'
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.lester:scolltextview:1.0.0'
     implementation 'com.squareup.okhttp:okhttp:2.7.0'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
-
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
 }
