--- a/xinshuwu/app/src/main/AndroidManifest.xml
+++ b/xinshuwu/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.xinshuwu">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
