add book detail data

--- a/xinshuwu/app/src/main/AndroidManifest.xml
+++ b/xinshuwu/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".detail.BookDetailActivity"
+            android:label="详情" />
     </application>
 
 </manifest>
